--- a/pi/status_page.html
+++ b/pi/status_page.html
@@ -59,7 +59,7 @@
     <h2>Telegram</h2>
     <p><strong>Bot token:</strong> <span class="{{ token_class }}">{{ token_status }}</span></p>
     <p><strong>Chat ID:</strong> <span class="{{ chat_class }}">{{ chat_status }}</span></p>
-    <p><strong>Jitsi room:</strong> {{ jitsi_room }}</p>
+    <p><strong>Call URL:</strong> {{ video_call_url }}</p>
   </div>
 
   <div class="section">
