--- a/pi/status_page.html
+++ b/pi/status_page.html
@@ -56,9 +56,7 @@
   </div>
 
   <div class="section">
-    <h2>Telegram</h2>
-    <p><strong>Bot token:</strong> <span class="{{ token_class }}">{{ token_status }}</span></p>
-    <p><strong>Chat ID:</strong> <span class="{{ chat_class }}">{{ chat_status }}</span></p>
+    <h2>Zoom</h2>
     <p><strong>Call URL:</strong> {{ video_call_url }}</p>
   </div>
 
@@ -71,9 +69,10 @@
 
   <div class="section" id="section-test-call">
     <h2>Test call</h2>
-    <p>Trigger a call and send the link to your Telegram (same as pressing the physical button).</p>
+    <p>Start the Zoom call on the Pi (same as pressing the physical button). Join the same meeting on your phone.</p>
     <p id="main-status">Main app: <span id="main-app-status">checking…</span></p>
     <a href="http://127.0.0.1:8766/trigger-call" class="btn" id="test-call-btn">Test call</a>
+    <a href="http://127.0.0.1:8766/dispense" class="btn" style="margin-left:0.5rem;">Dispense treat</a>
   </div>
 
   <script>
